--- a/index.html
+++ b/index.html
@@ -4,44 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <div class="app">
-      <div class="container-fluid  bg-dark p-2">
-        <div class="row justify-content-between text-light align-items-center px-3">
-
-          <div class="col-auto">
+      <div class="container bg-black t-white">
+        <div class="row justify-between">
+          <div>
             <h1>Campo Minato</h1>
           </div>
+          <div>
+            <input type="radio" id="facile" name="difficolta" value="facile" />
+            <label for="facile">Facile</label>
+            <input type="radio" id="media" name="difficolta" value="media" />
+            <label for="media">Media</label>
+            <input
+              type="radio"
+              id="difficile"
+              name="difficolta"
+              value="difficile"
+            />
+            <label for="difficile">Difficile</label>
 
-          <div class="col-auto d-flex gap-3">
-            <div>
-                <select name="difficulty" id="difficulty">
-                <option for="difficulty" id="easy">Easy</option>
-                <option for="difficulty" id="medium">Medium</option>
-                <option for="difficulty" id="hard">Hard</option>
-                </select>
-            </div>
-            
-            <button class="game-start">Play</button>
+            <button class="start">Play</button>
           </div>
-
         </div>
       </div>
-
-
-      <div class="container">
-        <div class="row">
-            *
+      <div class="container-game">
+        <div class="row f-wrap">
+          <!-- <div class="col-facile col-clicked bg-black"></div> -->
         </div>
       </div>
     </div>
 
     <script src="./js/app.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
-
   </body>
 </html>
