ADD html css js

--- a/index.html
+++ b/index.html
@@ -14,18 +14,10 @@
             <h1>Campo Minato</h1>
           </div>
           <div>
-            <input type="radio" id="facile" name="difficolta" value="facile" />
-            <label for="facile">Facile</label>
-            <input type="radio" id="media" name="difficolta" value="media" />
-            <label for="media">Media</label>
-            <input
-              type="radio"
-              id="difficile"
-              name="difficolta"
-              value="difficile"
-            />
-            <label for="difficile">Difficile</label>
-
+            <span>seleziona difficoltà</span>
+            <button id="facile">Facile</button>
+            <button id="media">Media</button>
+            <button id="difficile">Difficile</button>
             <button class="start">Play</button>
           </div>
         </div>
