--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
           </div>
           <div>
             <span>seleziona difficoltà</span>
-            <button id="facile">Facile</button>
-            <button id="media">Media</button>
-            <button id="difficile">Difficile</button>
+            <select name="difficolta" id="">
+              <option value="facile">facile</option>
+              <option value="media">media</option>
+              <option value="difficile">difficile</option>
+            </select>
             <button class="start">Play</button>
           </div>
         </div>
